CodeSource not correct when loading from modular JARs